fix(sidebar-menu): group headers now align correctly with other items (#64)

--- a/addon/styles/_application.scss
+++ b/addon/styles/_application.scss
@@ -141,6 +141,7 @@
 }
 
 .parent-route {
+  color: #202020;
   &:hover {
     color: #726b6b;
   }
